// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. primary tile 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "marginRight": 15,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginTop": -5,
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            <Svg>
              <G>
                <Path />
              </G>
            </Svg>
          </View>
          <Text
            style={
              Object {
                "color": "#E34605",
                "fontFamily": "TimesDigitalW04-RegularSC",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 1.4,
                "lineHeight": 12,
                "marginTop": 5,
              }
            }
          >
            new
          </Text>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 27,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "blue",
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</View>
`;

exports[`2. primary tiles without image 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "marginRight": 15,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginTop": -5,
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            <Svg>
              <G>
                <Path />
              </G>
            </Svg>
          </View>
          <Text
            style={
              Object {
                "color": "#E34605",
                "fontFamily": "TimesDigitalW04-RegularSC",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 1.4,
                "lineHeight": 12,
                "marginTop": 5,
              }
            }
          >
            new
          </Text>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 27,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text>
      
      The 
      <Text>
        Duke of Edinburgh
      </Text>
       could be charged with driving without due care and attention after his car accident yesterday
      ...
    </Text>
  </Text>
</View>
`;
